# 2025_KAI_Perception

./: .gitmodules  README.md
src/cam_yolo/: README.dataset.txt  README.roboflow.txt  data.yaml  main.py
src/cam_yolo/test/labels/: KCity_acceleration_3-1_mp4-0003_jpg.rf.93fdc210ddb99f00d69777f6855a7e05.txt  KCity_acceleration_3-1_mp4-0029_jpg.rf.dfcc61b02eb6aa5df5ea3de0c8587614.txt  KCity_acceleration_3-1_mp4-0047_jpg.rf.259a36c4fcb4dbb71f661157dfa6b6d5.txt  KCity_acceleration_3-1_mp4-0053_jpg.rf.3a266cfeb94e65b9ab8f3e96d2a2dc57.txt  KCity_acceleration_3-1_mp4-0060_jpg.rf.c0a6eefbf3fcf5bc6cd47e4a2f2265b6.txt  KCity_acceleration_3-2_mp4-0017_jpg.rf.e8e99b2c5417f384d16a357e6bf549c2.txt  KCity_acceleration_3-2_mp4-0024_jpg.rf.c262a7436f84ad934d1569303e0af316.txt  KCity_acceleration_3-2_mp4-0026_jpg.rf.cca99664456507ae0b1de2fe721a8b7c.txt  KCity_acceleration_3-2_mp4-0032_jpg.rf.a2cc388a04a73f43f8a6472312ea8646.txt  KCity_acceleration_3-2_mp4-0043_jpg.rf.25976c177d856795dad9e9e9c951ab5a.txt  KCity_acceleration_3-2_mp4-0049_jpg.rf.a421eeb5deeb9189ac53858bd456b461.txt  KakaoTalk_20241028_205942835_mp4-0020_jpg.rf.574593d39f3388393dece5919853f3b4.txt  (+107 more)
src/cam_yolo/train/: labels.cache
src/cam_yolo/valid/: labels.cache
src/cone_detection/: .gitignore  .gitmodules  CMakeLists.txt  package.xml
src/cone_detection/cone_detection/: README.md
src/cone_detection/config/: cone_detection_config.yaml
src/cone_detection/include/cone_detection/: common_defs.h  cone_detection_node.h  cone_visualizer.h
src/cone_detection/launch/: cone_detection_launch.py
src/cone_detection/msg/: MyMsgPair.msg  MyMsgPairArray.msg
src/cone_detection/src/: cone_detection_node.cpp
src/cone_projection/: package.xml  setup.cfg  setup.py
src/cone_projection/cone_projection/: print_sorted_cones.py  project_sorted_cones.py  read_yaml.py  visualize_sorted_cones.py  visualize_sorted_cones_kalman.py
src/cone_projection/config/: camera_extrinsic_calibration.yaml  general_configuration.yaml
src/custom_interface/: CMakeLists.txt  package.xml
src/custom_interface/msg/: ModifiedFloat32MultiArray.msg
src/hungarian_association/: package.xml  setup.cfg  setup.py
src/hungarian_association/config/: camera_intrinsic_calibration.yaml  hungarian_config.yaml
src/hungarian_association/hungarian_association/: config_utils.py  yolo_lidar_fusion.py
src/ros2_camera_lidar_fusion/: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
src/ros2_camera_lidar_fusion/config/: calib_rviz_config.rviz  camera_intrinsic_calibration.yaml  general_configuration.yaml
src/ros2_camera_lidar_fusion/data/: 20250305_192801.pcd  20250305_192814.pcd  20250305_192819.pcd  20250305_192850.pcd  20250305_192924.pcd  20250305_193149.pcd  20250305_193319.pcd  ros2_camera_lidar_fusion_correspondences.txt
src/ros2_camera_lidar_fusion/launch/: rviz2_launch.py
src/ros2_camera_lidar_fusion/ros2_camera_lidar_fusion/: extract_points.py  get_extrinsic_camera_calibration.py  get_intrinsic_camera_calibration.py  lidar_camera_projection.py  project_boxes_cones_points.py  read_yaml.py  save_sensor_data.py
src/usb_cam/config/: params_1.yaml
src/usb_cam/src/: usb_cam_node.cpp
src/yolo_ros/: README.md  requirements.txt
src/yolo_ros/yolo_bringup/: package.xml
src/yolo_ros/yolo_msgs/: package.xml
src/yolo_ros/yolo_ros/: package.xml  setup.py
(+3057 files in other folders)
