<?xml version="1.0"?>
<package format="3">
  <name>cone_detection</name>
  <version>0.1.0</version>
  <description>Cone detection package for ROS2</description>

  <maintainer email="kikiws70@konkuk.ac.kr">lhj</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>Boost</build_depend>
  <build_depend>custom_interface</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>custom_interface</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
